testsuite/tests/typecheck/should_fail/T15527.stderr

T15527.hs:4:6: error:
    Pattern syntax in expression context: (.)@Int
    Did you mean to enable TypeApplications?
